--- a/package.json
+++ b/package.json
@@ -20,5 +20,21 @@
   "bugs": {
     "url": "https://github.com/markrivasrobertson/bike_ride_app/issues"
   },
-  "homepage": "https://github.com/markrivasrobertson/bike_ride_app#readme"
+  "homepage": "https://github.com/markrivasrobertson/bike_ride_app#readme",
+  "dependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.7",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "body-parser": "^1.15.2",
+    "dotenv": "^2.0.0",
+    "express": "^4.14.0",
+    "morgan": "^1.7.0",
+    "react": "^15.4.0",
+    "react-dom": "^15.4.0",
+    "superagent": "^2.3.0",
+    "webpack": "^1.13.3",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-hot-middleware": "^2.13.2"
+  }
 }
