--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bike_ride_app",
+  "name": "shopping_list_app",
   "version": "1.0.0",
-  "description": "Create a team bike ride, or join an existing one",
+  "description": "Add to the shopping list",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
